plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(11)
	}
}

repositories {
	mavenCentral()
	google()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.google.code.gson:gson'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly	'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
	// 구글 OAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'com.google.api-client:google-api-client:2.5.0'
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
	//ChatGPT -> WebClient 사용 설정
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
//	implementation 'com.google.http-client:google-http-client-gson:1.43.3'
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.90.Final:osx-aarch_64'

	// CLOVA
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

	// Google 공식 BOM 사용
	implementation platform("com.google.cloud:libraries-bom:26.23.0")
	implementation 'com.google.cloud:google-cloud-texttospeech'
  
	//ChatGPT
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	// Naver 뉴스 호출
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'com.squareup.okhttp3:okhttp:4.9.3'

	// AWS
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// MySQL
	implementation 'mysql:mysql-connector-java:8.0.33'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}